<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.user.shoplocal1.Details1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include layout="@layout/toolbar" />
        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_name"
            android:gravity="center"
            android:textSize="24sp"
            android:marqueeRepeatLimit="marquee_forever" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageview"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@android:drawable/ic_menu_rotate" />

        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_price"
            android:gravity="center"
            android:textSize="24sp"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="false" />
        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:gravity="center"
            android:textSize="24sp"
            android:marqueeRepeatLimit="marquee_forever" />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/buy"
            android:onClick="selfDestruct" />
    </LinearLayout>
</ScrollView>
